[package]
name = "persistentvolumeclaim-storageclass-policy"
version = "1.0.1"
authors = ["Kubewarden developers <cncf-kubewarden-maintainers@lists.cncf.io>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
k8s-openapi = { version = "0.25.0", default_features = false, features = [
  "v1_32",
] }
kubewarden-policy-sdk = "0.13.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rstest = "0.25"

[dev-dependencies]
rstest = "0.25"
